# openenv-cybersec

./: Dockerfile  README.md  app.py  demo.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
baseline/: run_agent.py
env/: environment.py  grader.py  tasks.py
server/: app.py
simulator/: environment.py  models.py  tasks.py
