[project]
name = "cybersec-openenv"
version = "0.1.0"
description = "Cybersecurity OpenEnv environment"
authors = [
    { name = "Adipanwar123" }
]
dependencies = [
    "fastapi",
    "uvicorn",
    "openenv>=0.2.0"
]

[project.scripts]
server = "inference:app"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"